--- a/src/app/components/check-out/check-out.component.html
+++ b/src/app/components/check-out/check-out.component.html
@@ -1,1 +1,60 @@
-<p>check-out works!</p>
+<h2>Shipping</h2>
+<div class="row">
+  <div class="col-md-6">
+    <form #f="ngForm">
+      <div class="form-group my-3">
+        <label for="">Name</label>
+        <input
+          #name="ngModel"
+          name="name"
+          [(ngModel)]="shipping.name"
+          type="text"
+          class="form-control"
+          required
+        />
+        <div class="alert alert-danger" *ngIf="name.touched && name.invalid">
+          <div *ngIf="name.errors">Name is required.</div>
+        </div>
+      </div>
+      <div class="form-group my-3">
+        <label for="">Address</label>
+        <input
+          #address="ngModel"
+          name="address"
+          [(ngModel)]="shipping.address"
+          type="text"
+          class="form-control"
+          placeholder="Line 1"
+          required
+        />
+        <div
+          class="alert alert-danger"
+          *ngIf="address.touched && address.invalid"
+        >
+          <div *ngIf="address.errors">Address is required.</div>
+        </div>
+      </div>
+
+      <div class="form-group my-3">
+        <label for="">City</label>
+        <input
+          #city="ngModel"
+          name="city"
+          [(ngModel)]="shipping.city"
+          type="text"
+          class="form-control"
+          required
+        />
+        <div class="alert alert-danger" *ngIf="city.touched && city.invalid">
+          <div *ngIf="city.errors">City is required.</div>
+        </div>
+      </div>
+      <button (click)="placeOrder()" class="btn btn-primary">
+        Place Order
+      </button>
+    </form>
+  </div>
+  <div class="col-md-6">
+    <shopping-cart-summary ></shopping-cart-summary>
+  </div>
+</div>
