--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -32,7 +32,7 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            username
+          {{username?.name}}
           </a>
           <ul
             ngbDropdownMenu
