--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,57 +1,25 @@
-<div class="mt-3 col-8 offset-2">
-  <div class="card">
-    <div class="card-header">Login Here</div>
-    <div class="card-body">
-      <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
-        <div class="alert alert-danger" [hidden]="!error">
-          {{ error }}
-        </div>
-        <div class="row mb-3">
-          <label for="name" class="col-sm-2 col-form-label">Email</label>
-          <div class="col-sm-10">
-            <input
-              type="email"
-              name="email"
-              class="form-control"
-              id="name"
-              [(ngModel)]="form.email"
-              required
-            />
-          </div>
-        </div>
-        <div class="row mb-3">
-          <label for="name" class="col-sm-2 col-form-label">Password</label>
-          <div class="col-sm-10">
-            <input
-              type="password"
-              name="password"
-              class="form-control"
-              id="name"
-              [(ngModel)]="form.password"
-              required
-            />
-          </div>
-        </div>
-        <div class="d-flex justify-content-between">
-          <button
-            type="submit"
-            class="btn btn-primary"
-            [disabled]="!loginForm.valid"
-          >
-            Sign in
-          </button>
-          <a
-          routerLink="/signup"
-            class="btn btn-info"
-            
-          >
-            Sign up
-          </a>
-        </div>
-        <small class=" float-end ">
-          <a class="link-primary btn" routerLink="/request-reset-password">Reset Password</a>
-        </small>
-      </form>
-    </div>
-  </div>
+<div class="auth-wrapper">
+  <form class="form-signin" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <h3 class="h3 mb-3 font-weight-normal text-center">Sign in</h3>
+      <!-- Errors -->
+      <div *ngIf="errors?.email" class="alert alert-danger mt-3">
+          {{ errors?.email }}
+      </div>
+      <div *ngIf="errors?.password" class="alert alert-danger mt-3">
+          {{ errors?.password }}
+      </div>
+      <div *ngIf="errors?.error" class="alert alert-danger mt-3">
+          {{ errors?.error }}
+      </div>
+      <!-- Login -->
+      <div class="form-group">
+          <label>Email address</label>
+          <input type="email" class="form-control" formControlName="email">
+      </div>
+      <div class="form-group">
+          <label>Password</label>
+          <input type="password" class="form-control" formControlName="password">
+      </div>
+      <button type="submit" class="btn btn-block btn-primary">Log in</button>
+  </form>
 </div>
