--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,86 +1,42 @@
-<div class="mt-3 col-8 offset-2">
-  <div class="card">
-    <div class="card-header">Register Here</div>
-    <div class="card-body">
-      <form #signupForm="ngForm" (ngSubmit)="onSubmit()">
-        <div class="row mb-3">
-          <label for="name" class="col-sm-2 col-form-label">Name</label>
-          <div class="col-sm-10">
-            <input
-              type="name"
-              name="name"
-              class="form-control"
-              id="name"
-              [(ngModel)]="form.name"
-              required
-              placeholder="Your Name"
-            />
-          </div>
-          <div class="alert alert-danger" [hidden]="!error.name">
-            {{ error.name }}
-          </div>
-        </div>
-        <div class="row mb-3">
-          <label for="email" class="col-sm-2 col-form-label">Email</label>
-          <div class="col-sm-10">
-            <input
-              type="email"
-              name="email"
-              class="form-control"
-              id="email"
-              [(ngModel)]="form.email"
-              required
-              placeholder="Your Email"
-            />
-          </div>
-          <div class="alert alert-danger" [hidden]="!error.email">
-            {{ error.email }}
-          </div>
-        </div>
-        <div class="row mb-3">
-          <label for="password" class="col-sm-2 col-form-label">Password</label>
-          <div class="col-sm-10">
-            <input
-              type="password"
-              name="password"
-              class="form-control"
-              id="password"
-              [(ngModel)]="form.password"
-              required
-              placeholder="Your Password"
-            />
-          </div>
-          <div class="alert alert-danger" [hidden]="!error.password">
-            {{ error.password }}
-          </div>
-        </div>
-        <div class="row mb-3">
-          <label for="password_confirmation" class="col-sm-2 col-form-label"
-            >Password Confirmation</label
-          >
-          <div class="col-sm-10">
-            <input
-              type="password"
-              name="password_confirmation"
-              class="form-control"
-              id="password_confirmation"
-              [(ngModel)]="form.password_confirmation"
-              required
-              placeholder="Password Confirmation"
-            />
-          </div>
-        </div>
-        <div class="d-flex justify-content-between">
-          <button
-            type="submit"
-            class="btn btn-primary"
-            [disabled]="!signupForm.valid"
-          >
-            Sign Up
-          </button>
-          <a routerLink="/login" class="btn btn-info"> Sign In </a>
-        </div>
-      </form>
+<div class="auth-wrapper">
+  <form class="form-signin" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+    <h3 class="h3 mb-3 font-weight-normal text-center">Register User</h3>
+    <!-- Errors -->
+    <div *ngIf="errors?.name" class="alert alert-danger mt-3">
+      {{ errors?.name }}
     </div>
-  </div>
+    <div *ngIf="errors?.email" class="alert alert-danger mt-3">
+      {{ errors?.email }}
+    </div>
+    <div *ngIf="errors?.password" class="alert alert-danger mt-3">
+      {{ errors?.password }}
+    </div>
+    <div *ngIf="errors?.password_confirmation" class="alert alert-danger mt-3">
+      {{ errors?.password_confirmation }}
+    </div>
+    <!-- Signup form -->
+    <div class="form-group">
+      <label>Name</label>
+      <input type="text" class="form-control" formControlName="name" />
+    </div>
+    <div class="form-group">
+      <label>Email address</label>
+      <input type="email" class="form-control" formControlName="email" />
+    </div>
+    <div class="form-group">
+      <label>Password</label>
+      <input type="password" class="form-control" formControlName="password" />
+    </div>
+    <div class="form-group">
+      <label>Confirm Password</label>
+      <input
+        type="password"
+        class="form-control"
+        formControlName="password_confirmation"
+      />
+    </div>
+    <button type="submit" class="btn btn-block btn-primary">
+      Register User
+    </button>
+  </form>
 </div>
