--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -39,16 +39,16 @@
             class="dropdown-menu"
             aria-labelledby="navbarDropdown"
           >
-            <li>
+            <li >
               <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
             </li>
             <li><hr class="dropdown-divider" /></li>
-            <li>
+            <li *ngIf="isAdmin">
               <a class="dropdown-item" routerLink="/admin/orders"
                 >Manage Orders</a
               >
             </li>
-            <li>
+            <li *ngIf="isAdmin">
               <a class="dropdown-item" routerLink="/admin/products"
                 >Manage Products</a
               >
