--- a/src/app/components/shopping-cart-summary/shopping-cart-summary.component.html
+++ b/src/app/components/shopping-cart-summary/shopping-cart-summary.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <h5 class="card-title">Order Summary</h5>
     <p class="card-text">
-      You have {{ cart.quantity }} items in your shopping cart
+      You have {{ cart?.quantity }} items in your shopping cart
     </p>
     <ul class="list-group">
       
